--- a/css/temp.css
+++ b/css/temp.css
@@ -1,72 +1,76 @@
+ /* Contact Section */
+ .contact-section {
+  display: flex;
+  justify-content: space-between;
+  padding: 3rem 2rem;
+  background-color: #fff;
+  color: #444;
+}
 
-.team-section {
-    text-align: center;
-    padding: 3rem 1.5rem;
-    background-color: white;
-  }
-  
-  .team-section h2 {
-    text-align: center;
-    font-size: 2.5rem;
-    color: #1f4e3c;
-    margin-bottom: 2rem;
-  }
-  
-  /* Container for the section */
-  .team-container {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 1rem;
-    color: #444;
-  }
-  
-  /* Card Container */
-  .team-card {
-    position: relative;
-    width: 300px;
-    height: 400px;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-  }
-  
-  /* Image Styling */
-  .team-card img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  /* Text Overlay */
-  .team-card .overlay-text {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 1rem;
-    background: rgba(0, 0, 0, 0.5); /* Transparent background */
-    color: #fff;
-    text-align: left;
-  }
-  
-  .team-card h3 {
-    font-size: 1.5rem;
-    margin-bottom: 0.5rem;
-  }
-  
-  .team-card p {
-    font-size: 0.9rem;
-    line-height: 1.4;
-  }
-  
-  .overlay-text h3 {
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
 
-  .overlay-text p {
-    font-size: 1rem;
-  }
+.info-item {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.info-item img {
+  width: 60px;
+  height: 59px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+
+  margin-bottom: 0.5rem;
+}
+.info-item p {
+  color: #444;
+}
+
+.social-icons a {
+  margin: 0 5px;
+  text-decoration: none;
+  color: #333;
+  font-size: 1.2rem;
+}
+
+.contact-form {
+  width: 50%;
+}
+
+.contact-form form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.contact-form label {
+  font-weight: bold;
+}
+
+.contact-form input,
+.contact-form textarea {
+  padding: 0.8rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 1rem;
+}
+
+.contact-form button {
+  background-color: #1d3b30;
+  color: #fff;
+  padding: 0.8rem;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 1rem;
+}
+
+.contact-form button:hover {
+  background-color: #274e3b;
+}
