--- a/css/home.css
+++ b/css/home.css
@@ -71,14 +71,14 @@
 }
 .team-card img {
     width: 100%;
-    height: 300px; /* Fixed height for consistent card sizes */
-    object-fit: cover; /* Maintain aspect ratio and cover the entire area */
+    height: 300px; 
+    object-fit: cover; 
 }
 
 .card-body {
     bottom: 0;
     width: 100%;
-    height: 45%;
+    height: 6rem;
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
 }
