styling changes for teams

--- a/css/style.css
+++ b/css/style.css
@@ -128,3 +128,10 @@ p {
        display: none;
    }
 }
+
+.footer2 {
+  text-align: center;
+  padding: 20px 10px;
+  background-color: #12291d;
+  font-size: 14px;
+}
