--- a/css/home.css
+++ b/css/home.css
@@ -3,10 +3,11 @@
     justify-content: center;
 }
 .hero-img img {
-    width: 50%;
-    height: auto;
-    position: relative;
-    margin-top: -15%;
+  border-radius: 5px;
+  width: 50%;
+  height: auto;
+  position: relative;
+  margin-top: -15%;
 }
 
 @media screen and (max-width: 600px){
