--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ p {
 .group_image img{
   margin-top: 100px;
   margin-bottom: 10px;
-  max-height: 400px;
+  height: 400px;
   width: 100%;
   display: flex;
   align-items: center;
